--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build --webpack",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "smoke": "tsx scripts/smoke.ts",
     "ci:smoke": "npm run lint && npm run build && npm run smoke"
   },
