--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint .",
-    "smoke": "tsx scripts/smoke.ts",
+    "smoke": "tsx tests/smoke.ts",
     "ci:smoke": "npm run lint && npm run build && npm run smoke"
   },
   "dependencies": {
