--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -6,10 +6,7 @@
     "dev": "next dev",
     "build": "next build --webpack",
     "start": "next start",
-    "lint": "eslint .",
-    "smoke": "tsx tests/smoke.ts",
-    "userflows": "tsx tests/userflows.ts",
-    "ci:smoke": "npm run lint && npm run build && npm run smoke && npm run userflows"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.93.1",
@@ -24,7 +21,6 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.5",
-    "tsx": "^4.20.5",
     "typescript": "^5"
   }
 }
