--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "centerway-monorepo",
   "private": true,
   "workspaces": [
-    "apps/*",
-    "packages/*"
+    "apps/*"
   ],
   "scripts": {
     "dev": "npm run -w apps/platform dev",
     "lint": "npm run -w apps/platform lint",
-    "build": "npm run -w apps/platform build",
-    "smoke": "npm run -w apps/platform smoke",
-    "ci:smoke": "npm run -w apps/platform ci:smoke"
+    "build": "npm run -w apps/platform build"
   }
 }
